// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch demo -- checked 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c7 {
  width: 20px;
  height: 20px;
}

.c0 .c9 {
  left: 13px;
  height: 10px;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c7 {
  left: 49px;
}

.c0 .c9 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c11:hover {
  border-color: #4683e6;
}

.c11 .c7 {
  width: 20px;
  height: 20px;
}

.c11 .c9 {
  left: 13px;
  height: 10px;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- disabled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.gUQuWo .c7 {
  width: 20px;
  height: 20px;
}

.gUQuWo .c9 {
  left: 13px;
  height: 10px;
}

.gUQuWo .c3,
.gUQuWo .c5 {
  line-height: 16px;
}

.gUQuWo .c3 {
  padding-right: 20px;
}

.gUQuWo .c5 {
  padding-left: 20px;
}

.gUQuWo .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.gUQuWo .c7 {
  left: 49px;
}

.gUQuWo .c9 {
  background: #9fecc0;
}

.gUQuWo .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c7 {
  width: 20px;
  height: 20px;
}

.c0 .c9 {
  left: 13px;
  height: 10px;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
  border-color: #d9d9d9;
  cursor: not-allowed;
  pointer-events: none;
}

.c11:hover {
  border-color: #4683e6;
}

.c11 .c7 {
  width: 20px;
  height: 20px;
}

.c11 .c9 {
  left: 13px;
  height: 10px;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c11 .c9 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- onTextAndOffText 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.gUQuWo .c7 {
  width: 20px;
  height: 20px;
}

.gUQuWo .c9 {
  left: 13px;
  height: 10px;
}

.gUQuWo .c3,
.gUQuWo .c5 {
  line-height: 16px;
}

.gUQuWo .c3 {
  padding-right: 20px;
}

.gUQuWo .c5 {
  padding-left: 20px;
}

.gUQuWo .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.gUQuWo .c7 {
  left: 49px;
}

.gUQuWo .c9 {
  background: #9fecc0;
}

.gUQuWo .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c7 {
  width: 20px;
  height: 20px;
}

.c0 .c9 {
  left: 13px;
  height: 10px;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.fIazOB .c7 {
  width: 20px;
  height: 20px;
}

.fIazOB .c9 {
  left: 13px;
  height: 10px;
}

.fIazOB .c3,
.fIazOB .c5 {
  line-height: 16px;
}

.fIazOB .c3 {
  padding-right: 20px;
}

.fIazOB .c5 {
  padding-left: 20px;
}

.fIazOB .c3 {
  display: none;
}

.fIazOB .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.fIazOB .c9 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          开
        </span>
        <span
          class="c5 c6"
        >
          关
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- size 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.gUQuWo .c7 {
  width: 20px;
  height: 20px;
}

.gUQuWo .c9 {
  left: 13px;
  height: 10px;
}

.gUQuWo .c3,
.gUQuWo .c5 {
  line-height: 16px;
}

.gUQuWo .c3 {
  padding-right: 20px;
}

.gUQuWo .c5 {
  padding-left: 20px;
}

.gUQuWo .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.gUQuWo .c7 {
  left: 49px;
}

.gUQuWo .c9 {
  background: #9fecc0;
}

.gUQuWo .c5 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c11:hover {
  border-color: #4683e6;
}

.c11 .c7 {
  width: 20px;
  height: 20px;
}

.c11 .c9 {
  left: 13px;
  height: 10px;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.fIazOB .c7 {
  width: 20px;
  height: 20px;
}

.fIazOB .c9 {
  left: 13px;
  height: 10px;
}

.fIazOB .c3,
.fIazOB .c5 {
  line-height: 16px;
}

.fIazOB .c3 {
  padding-right: 20px;
}

.fIazOB .c5 {
  padding-left: 20px;
}

.fIazOB .c3 {
  display: none;
}

.fIazOB .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.fIazOB .c9 {
  background-color: #f7f7f7;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  width: 45px;
  padding: 1px;
  border: none;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c7 {
  width: 22px;
  height: 22px;
}

.c0 .c9 {
  left: 13px;
  height: 12px;
}

.c0 .c3,
.c0 .c5 {
  display: none;
}

.c0 .c3 {
  display: none;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 22px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c7 {
  width: 26px;
  height: 26px;
}

.c12 .c9 {
  left: 18px;
  height: 16px;
}

.c12 .c3 {
  padding-right: 26px;
}

.c12 .c5 {
  padding-left: 26px;
}

.c12 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c12"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- switch 1`] = `
.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c19 {
  width: 20px;
  height: 20px;
}

.c23 .c21 {
  left: 13px;
  height: 10px;
}

.c23 .c15,
.c23 .c17 {
  line-height: 16px;
}

.c23 .c15 {
  padding-right: 20px;
}

.c23 .c17 {
  padding-left: 20px;
}

.c23 .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c23 .c19 {
  left: 49px;
}

.c23 .c21 {
  background: #9fecc0;
}

.c23 .c17 {
  display: none;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.fIazOB .c19 {
  width: 20px;
  height: 20px;
}

.fIazOB .c21 {
  left: 13px;
  height: 10px;
}

.fIazOB .c15,
.fIazOB .c17 {
  line-height: 16px;
}

.fIazOB .c15 {
  padding-right: 20px;
}

.fIazOB .c17 {
  padding-left: 20px;
}

.fIazOB .c15 {
  display: none;
}

.fIazOB .c13 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.fIazOB .c21 {
  background-color: #f7f7f7;
}

.eJjPMm .c19 {
  width: 22px;
  height: 22px;
}

.eJjPMm .c21 {
  left: 13px;
  height: 12px;
}

.eJjPMm .c15,
.eJjPMm .c17 {
  display: none;
}

.eJjPMm .c15 {
  display: none;
}

.jPLcb .c19 {
  width: 26px;
  height: 26px;
}

.jPLcb .c21 {
  left: 18px;
  height: 16px;
}

.jPLcb .c15 {
  padding-right: 26px;
}

.jPLcb .c17 {
  padding-left: 26px;
}

.jPLcb .c15 {
  display: none;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c24 {
  position: relative;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c24 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  background: #FFF;
  font-size: inherit;
  outline: none;
  color: inherit;
  height: 28px;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c24 input:hover {
  border-color: #4683e6;
}

.c24 input:focus {
  border-color: #4683e6;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c23"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        onText
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c24"
        >
          <input
            value="ON"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        offText
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c24"
        >
          <input
            value="OFF"
          />
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c23"
    >
      <div
        class="c13 c14"
      >
        <span
          class="c15 c16"
        >
          ON
        </span>
        <span
          class="c17 c18"
        >
          OFF
        </span>
        <span
          class="c19 c20"
        >
          <span
            class="c21 c22"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- uncontrolled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c7 {
  width: 20px;
  height: 20px;
}

.c0 .c9 {
  left: 13px;
  height: 10px;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c7 {
  left: 49px;
}

.c0 .c9 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.XpRbr .c7 {
  width: 20px;
  height: 20px;
}

.XpRbr .c9 {
  left: 13px;
  height: 10px;
}

.XpRbr .c3,
.XpRbr .c5 {
  line-height: 16px;
}

.XpRbr .c3 {
  padding-right: 20px;
}

.XpRbr .c5 {
  padding-left: 20px;
}

.XpRbr .c3 {
  display: none;
}

.fIazOB .c7 {
  width: 20px;
  height: 20px;
}

.fIazOB .c9 {
  left: 13px;
  height: 10px;
}

.fIazOB .c3,
.fIazOB .c5 {
  line-height: 16px;
}

.fIazOB .c3 {
  padding-right: 20px;
}

.fIazOB .c5 {
  padding-left: 20px;
}

.fIazOB .c3 {
  display: none;
}

.fIazOB .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.fIazOB .c9 {
  background-color: #f7f7f7;
}

.eJjPMm .c7 {
  width: 22px;
  height: 22px;
}

.eJjPMm .c9 {
  left: 13px;
  height: 12px;
}

.eJjPMm .c3,
.eJjPMm .c5 {
  display: none;
}

.eJjPMm .c3 {
  display: none;
}

.jPLcb .c7 {
  width: 26px;
  height: 26px;
}

.jPLcb .c9 {
  left: 18px;
  height: 16px;
}

.jPLcb .c3 {
  padding-right: 26px;
}

.jPLcb .c5 {
  padding-left: 26px;
}

.jPLcb .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c6"
        >
          OFF
        </span>
        <span
          class="c7 c8"
        >
          <span
            class="c9 c10"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
